# ImGuiProjectTemplate

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakeLists_8txt.html  LICENSE  Makefile  README.md  conanfile.txt  dir_08ebf401352d0c333d3a643fc2ed36cf.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  imgui.ini  my__lib_2CMakeLists_8txt.html  my__lib_8cc.html  my__lib_8cc__incl.dot  my__lib_8h.html  my__lib_8h__dep__incl.dot  my__lib_8h_source.html
app/: CMakeLists.txt  cycle.cpp  cycle.hpp  main.cpp
cmake/: AddGitSubmodule.cmake  StaticAnalyzers.cmake
src/render/: CMakeLists.txt  render.cpp  render.hpp
